Attempts to fix bug where product search field and button do no align in Win8.1 Chrome 39

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -291,7 +291,7 @@ header nav {
                 }
 
                 &.folder {
-                    /* Folder dropdown arrow BG style goes Here */  
+                    /* Folder dropdown arrow BG style goes Here */
                     cursor: pointer;
                     background-image: none;
                     .text {
@@ -413,7 +413,7 @@ left: inherit !important;
 }
 
 .widget.feature .feature-bgimg {
-  height: 650px; 
+  height: 650px;
   background-position: center center;
   margin-bottom: 30px;
  }
@@ -491,7 +491,7 @@ left: inherit !important;
   margin: 0;
 }
 
-.widget.feature button:hover 
+.widget.feature button:hover
 {
   background-color: hsla(hue(@color-swatch4), saturation(@color-swatch4), lightness(lighten(@color-swatch4,10%)), 0.9);
   color: @font-swatch7-color;
@@ -589,7 +589,7 @@ left: inherit !important;
 }
 
 
-.widget.button button:hover 
+.widget.button button:hover
 {
   background-color: @font-swatch7-background-color-hover;
   cursor: pointer;
@@ -861,7 +861,7 @@ ul.twitter {
     text-decoration: none;
     letter-spacing: 1px;
 }
-  
+
 .widget.contactform fieldset button.btn:hover {
   background-color: @font-swatch7-background-color-hover;
   cursor: pointer;
@@ -928,7 +928,7 @@ ul.twitter {
 .widget.tweet .tweet{
    margin: 0 0 10px;
    padding: 14px 0;
-   
+
 }
 
 .widget.tweet a {
@@ -1036,7 +1036,7 @@ ul.twitter {
 }
 
 .widget.socialicons span a,
-.widget.profile .bk-profile-socialicons span a, 
+.widget.profile .bk-profile-socialicons span a,
 .header-content-widgets .header-right .widget.profile .bk-profile-socialicons span a {
     background-color: @color-swatch2;
     background-repeat: no-repeat;
@@ -1308,7 +1308,7 @@ color: @color-swatch5;
         display: inline-block;
         @media @mobile {
             width: 100%;
-        }       
+        }
     }
 }
 
@@ -1407,7 +1407,7 @@ select[name="displayCount"] {
             width: 30%;
         }
     }
-} 
+}
 .blog-post-feature-image-wrap {  /* Blog post feature image */
     background-size: cover;
     background-repeat: no-repeat;
@@ -1674,19 +1674,19 @@ footer.blog-post-metadata time {
 }
 
 
-@media only screen and (max-width: 1400px) { 
+@media only screen and (max-width: 1400px) {
     .header-content-widgets {
       margin-left: 0;
     }
 }
 
-@media only screen and (max-width: 1100px) { 
+@media only screen and (max-width: 1100px) {
     .widget.feature .content .spare {
       width: 800px;
     }
 }
 
-@media only screen and (max-width: 900px) { 
+@media only screen and (max-width: 900px) {
     .widget.feature .content .spare {
       width: 700px;
     }
@@ -1697,7 +1697,7 @@ footer.blog-post-metadata time {
    IPAD WIDTH
    =============================== */
 
-@media only screen and (max-width: 768px) { 
+@media only screen and (max-width: 768px) {
 
 /* DEFAULT PAGE TYPE */
 
@@ -1767,7 +1767,7 @@ footer.blog-post-metadata time {
 
 /* SLIDESHOW */
 
-.widget.responsiveslideshow .slideshow-image-list, 
+.widget.responsiveslideshow .slideshow-image-list,
 .widget.responsiveslideshow .slideshow-widget {
     height:400px;
 }
@@ -1778,7 +1778,7 @@ footer.blog-post-metadata time {
    IPHONE WIDTH
    =============================== */
 
-@media only screen and (max-width: 480px) { 
+@media only screen and (max-width: 480px) {
 
     .bk-footer {
         padding: 1.5em 0;
@@ -1857,7 +1857,7 @@ footer.blog-post-metadata time {
         font-size: bkscale(@font-swatch8-font-size,0.8);
         line-height: bkscale(@font-swatch8-line-height,0.8);
         background: transparent;
-        
+
     }
 
     .widget.feature h3 {
@@ -1939,7 +1939,7 @@ footer.blog-post-metadata time {
         text-align: justify;
     }
 
-    .widget.clicktocall a.italic { 
+    .widget.clicktocall a.italic {
         font-style: italic;
     }
 
@@ -2052,7 +2052,7 @@ footer.blog-post-metadata time {
     h4, .menu-item-nutritional-prop {
       font-size: bkscale(@font-swatch5-font-size,0.9);
     }
-    .menu-header, .menu-subsection-header { 
+    .menu-header, .menu-subsection-header {
       text-align: center;
        padding: 2em 0;
     }
@@ -2119,7 +2119,7 @@ footer.blog-post-metadata time {
   color: @color-swatch7;
 }
 
-.menu-subsection .menu-subsection-promoted { /* PROMOTED SUB-SECTION */ 
+.menu-subsection .menu-subsection-promoted { /* PROMOTED SUB-SECTION */
     padding: 0.5em 2.5em;
     margin-bottom: 2em;
     position: relative;
@@ -2205,6 +2205,8 @@ select[name="displayCount"] {
       font-family: @font-swatch5-font-family;
       font-size: @font-swatch5-font-size;
       color: @color-swatch5;
+      width: 65%;
+	  float: left;
       @media @tablet {
         min-width: 50%;
         margin-bottom: 20px;
@@ -2225,6 +2227,8 @@ select[name="displayCount"] {
         color: @font-swatch7-color;
         text-decoration: none;
         letter-spacing: 1px;
+        width: 35%;
+        float: left;
         &:hover {
           background-color: @font-swatch7-background-color-hover;
           cursor: pointer;
